Modernize (#354)
* switch to bun

* clean up linting setup

* residuals

* move to radix ui

* better loading

* done

* clean up ladesaeulen

* fix types

* update deps
