# public/openapi.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "API Bundesdatenkrake",
+    "title": "API Open Data Aggregator",
     "version": "1.0.0",
     "description": "Über diese API können maschinenlesbare, versionierte Snapshots verschiedener Register (Quellen) bezogen werden."
   },
@@ -128,7 +128,7 @@
     },
     "/schema": {
       "get": {
-        "summary": "Schema einer Datei laden",
+        "summary": "JSON-Schema laden",
         "parameters": [
           {
             "in": "query",
@@ -138,13 +138,6 @@
               "type": "string"
             },
             "required": true
-          },
-          {
-            "in": "query",
-            "name": "file",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
